--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 username=s16444818@gmail.com
 password=Pa$$w(This will not work, don't try..)
-flag=THM{Greate_job_submit_me}
+SEC_TOKEN_FLAG=VEhNe0dyZWF0ZV9qb2Jfc3VibWl0X21lfQ==
